examples/force-app/objects/Allergy_Analysis__c/Allergy_Analysis__c.object-meta.xml
<CustomObject>
    <label>Allergy Analysis</label>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allergy Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>