examples/force-app/objects/Allergy_Analysis__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>