examples/force-app/objects/Allergy_Analysis__c/fields/Estimated_Amount_Of_Calories__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount_Of_Calories__c</fullName>
    <label>Estimated Amount Of Calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>