examples/force-app/objects/Allergy_Analysis__c/fields/Reason_for_confidence_score__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_confidence_score__c</fullName>
    <label>Reason for confidence score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>