examples/force-app/objects/Allergy_Analysis__c/fields/Shopping_List__c.field-meta.xml
<CustomField>
    <fullName>Shopping_List__c</fullName>
    <label>Shopping List</label>
    <referenceTo>Shopping_List__c</referenceTo>
    <relationshipLabel>Allergy Analyses</relationshipLabel>
    <relationshipName>Allergy_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>